--- a/stenlitrans/src/index.css
+++ b/stenlitrans/src/index.css
@@ -1,9 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orelega+One&display=swap');
 
 /* base styles */
 * {
   margin: 0;
   font-family: "Quicksand";
+  color: #333;
+}
+.cyrillic {
+  margin: 0;
+  font-fmaily: "Orelega One";
   color: #333;
 }
 .navbar {
@@ -45,4 +51,7 @@
   font-size: 20px;
   color: #f1356d;
   margin-bottom: 8px;
+}
+.blog-preview a{
+  text-decoration: none;
 }
