--- a/stenlitrans/src/index.css
+++ b/stenlitrans/src/index.css
@@ -19,6 +19,8 @@
   max-width: max;
   margin: 0 auto;
   border-bottom: 1px solid #f2f2f2;
+  backdrop-filter: blur(20px);
+  background: transparent;
 }
 .navbar h1 {
   color: #34dbeb;
@@ -36,8 +38,9 @@
 }
 .content {
   max-width: max;
-  margin: 40px auto;
-  padding: 20px;
+  margin: 0px auto;
+  padding: 0px;
+  
 }
 .blog-preview {
   padding: 10px 16px;
@@ -54,4 +57,14 @@
 }
 .blog-preview a{
   text-decoration: none;
+}
+.image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
